--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -27,12 +27,13 @@ Use the archive extraction tool of your choice to extract the files from the GYB
 = Step 3: Running GYB for the First Time =
 == Windows Users ==
 Open a command prompt on your computer. You can do this by going to Start -> Programs -> Accessories -> Command Prompt or by opening the Run... dialog on the start menu and typing CMD then enter. Now change to the directory where you extracted GAM. The command to change directories looks like:
+
 {{{
 cd \gyb
 }}}
 this works if you extracted GYB to c:\gyb. If you extracted it elsewhere, specify that location instead. Now type:
 {{{
-gyb --email youremail@gmail.com --action estimate
+gyb --email youremail@gmail.com --estimate
 }}}
 except use your real email address in place of youremail@gmail.com. GYB will open up a web page in order for you to grant GYB access to your Gmail account. This authorization makes it possible for GYB to connect to your Google Account via IMAP and SMTP only, GYB will have no rights to any of your other Google Data. Make sure you are logged in to the Google account you specified before granting access. Once you've granted access, switch back to the command prompt window and hit enter. If no errors are printed, GYB should start estimating the size of your Gmail mailbox. Note that GYB only estimates the size of messages in the All Mail folder, it does not check Spam or Trash although these do count against your Gmail quota displayed at the bottom of your Gmail inbox. To accurately compare GYB's estimate and the Gmail inbox web page quota display, first empty your Trash and Spam folders.
 
@@ -45,28 +46,30 @@ cd ~/gyb
 }}}
 this will work if you extracted the GYB files to a subfolder named gyb in your home directory. If you extracted them elsewhere, replace ~/gyb with the full path to them. Now run:
 {{{
-python gyb.py --email youremail@gmail.com
+python gyb.py --email youremail@gmail.com --estimate
 }}}
 If you get an error about python not being a valid program, make sure you have the Python interpreter installed on your machine. All Macs and most Linux installs should include Python but if not, you may need to research how to install it on your OS/Distribution.
 
 GYB will open up a web page in order for you to grant GYB access to your Gmail account. This authorization makes it possible for GYB to connect to your Google Account via IMAP and SMTP only, GYB will have no rights to any of your other Google Data. Make sure you are logged in to the Google account you specified before granting access. Once you've granted access, switch back to the command prompt window and hit enter. If no errors are printed, GYB should start estimating the size of your Gmail mailbox. Note that GYB only estimates the size of messages in the All Mail folder, it does not check Spam or Trash although these do count against your Gmail quota displayed at the bottom of your Gmail inbox. To accurately compare GYB's estimate and the Gmail inbox web page quota display, first empty your Trash and Spam folders.
 
-Instead of needing to type "python gyb.py" for every command, we can use the alias command to shorten it to just "gyb":
+Instead of needing to type "python gyb.py" for every command, you can mark the gyb.py file as executable or we can use the alias command to shorten it to just "gyb":
 {{{
 alias gyb="python gyb.py"
 }}}
 Now when we can just type commands like:
 {{{
-gyb --email myemail@gmail.com --action estimate
+gyb --email myemail@gmail.com --estimate
 }}}
-you'll need to type the alias command each time you open a Terminal to run GYB. Congratulations, you're up and running with GYB! You probably want to move on to [#Step_4:_Performing_A_Backup performing a backup] now.
+you'll need to type the alias command each time you open a Terminal to run GYB. 
+
+Congratulations, you're up and running with GYB! You probably want to move on to [#Step_4:_Performing_A_Backup performing a backup] now.
 
 = Step 4: Performing A Backup =
 A basic GYB backup is very easy to start. Just run:
 {{{
-gyb --email youremail@gmail.com --action backup
+gyb --email youremail@gmail.com --backup
 }}}
-the "--action backup" is not strictly necessary since GYB defaults to backing up if an action is not specified. Assuming you've already granted GYB access to your Gmail messages, GYB will load the access token from youremail@gmail.com.cfg and use it to get access to your messgaes. By default, GYB will download and save all messages to a folder named "GYB-GMail-Backup-youremail@gmail.com". You can specify another folder for GYB to use with the --folder argument:
+the "--backup" is not strictly necessary since GYB defaults to backing up if an action is not specified. Assuming you've already granted GYB access to your Gmail messages, GYB will load the access token from youremail@gmail.com.cfg and use it to get access to your messgaes. By default, GYB will download and save all messages to a folder named "GYB-GMail-Backup-youremail@gmail.com". You can specify another folder for GYB to use with the --folder argument:
 {{{
 gyb --email youremail@gmail.com --folder "C:\Users\John\Documents\Johns_Gmail_Backup"
 }}}
@@ -75,7 +78,7 @@ GYB will keep you update you as the backup progresses.
 = Step 5: Performing a Restore =
 Restores on GYB are also very simple:
 {{{
-gyb --email youremail@gmail.com --action restore --folder "c:\my_gmail_backup"
+gyb --email youremail@gmail.com --restore --folder "c:\my_gmail_backup"
 }}}
 the specified folder should exist and should have been used in a previous GYB backup. If not specified, restores default to using the GYB-GMail-Backup-youremail@gmail.com folder just like the backup does. GYB will connect to your Gmail account and perform the restore of all messages in the backup folder.
 
@@ -83,7 +86,7 @@ Note that if you perform a restore to the same Gmail account, GYB will not creat
 
 You can also use the "--label-restored NEWLABELNAME" argument to set a label on all restored messages. For example:
 {{{
-gyb --email youremail@gmail.com --action restore --label-restored "Restored 05-09-11"
+gyb --email youremail@gmail.com --restore --label-restored "Restored 05-09-11"
 }}}
 
 = Selective Backups With Gmail Searching =
@@ -93,12 +96,26 @@ gyb --email youremail@gmail.com --search "is:important OR is:starred"
 }}}
 would cause GYB to only backup messages matching that search query. Virtually any Gmail search will work with GYB. The only exception being that specifying "in:anywhere" will not backup Trash and Spam, there's currently no way to backup Trash and Spam with GYB. [http://mail.google.com/support/bin/answer.py?answer=7190 See here for a detailed article] on all of the possible Gmail Search parameters.
 
-Note that Gmail searches also work with the "--action estimate" command. Suppose you wanted to know how much space emails with .PDF attachment are using in your Gmail mailbox:
+Note that Gmail searches also work with the "--estimate" command. Suppose you wanted to know how much space emails with .PDF attachment are using in your Gmail mailbox:
 {{{
-gyb --action estimate --search "filename:PDF"
+gyb --estimate --search "filename:PDF"
 }}}
-
 will estimate the size of messages with PDF attachments only. Try substituting DOC, JPG, ZIP and other common file attachments for PDF.
+
+You can also supply a list of labels following each of the actions to limit the action to messages with those labels:
+{{{
+gyb --email youremail@gmail.com --backup inbox important
+gyb --email youremail@gmail.com --restore inbox important
+}}}
+Supplying labels with a "backup" or "estimate" is equivalent to specifying a search: {{{--search "l:inbox OR l:important"}}}. If a label list and a search argument are both supplied, they will be joined together.  
+Specifying labels with a restore is the only way to limit the restore to particular labels. 
+
+= Advanced options =
+The *-C* or *--compress* option will attempt to use compression in the connection to Gmail, reducing the bandwidth used to complete the requested actions. In some cases, it may also reduce the time required.
+
+GYB keeps a record of messages restored to each account. The *--resume* switch will make GYB skip already completed messages during a restore. This avoids the need to upload the same messages again if the restore was interrupted.
+
+By default, GYB will refresh the stored labels and flags for messages that have already been backed up, just in case they changed after the backup. This step can be skipped by supplying the *-F* or *--fast-incremental* switch on the command line.
 
 = Google Apps Business and Education Admins: Backup, Restore and Estimate your user's email =
 If you're using Google Apps Business or Education Edition, it's possible to perform GYB Backups, Restores and Estimates for your Google Apps users without needing to know their password. This works because GYB can make use of a special Google Apps feature called Two-Legged OAuth. Just run:
