Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -33,9 +33,9 @@ cd \gyb
 }}}
 this works if you extracted GYB to c:\gyb. If you extracted it elsewhere, specify that location instead. Now type:
 {{{
-gyb --email youremail@gmail.com --estimate
+gyb --email youremail@gmail.com --action estimate
 }}}
-except use your real email address in place of youremail@gmail.com. GYB will open up a web page in order for you to grant GYB access to your Gmail account. This authorization makes it possible for GYB to connect to your Google Account via IMAP and SMTP only, GYB will have no rights to any of your other Google Data. Make sure you are logged in to the Google account you specified before granting access. Once you've granted access, switch back to the command prompt window and hit enter. If no errors are printed, GYB should start estimating the size of your Gmail mailbox. Note that GYB only estimates the size of messages in the All Mail folder, it does not check Spam or Trash although these do count against your Gmail quota displayed at the bottom of your Gmail inbox. To accurately compare GYB's estimate and the Gmail inbox web page quota display, first empty your Trash and Spam folders.
+except use your real email address in place of youremail@gmail.com. GYB will open up a web page in order for you to grant access to your Gmail account. This authorization makes it possible for GYB to connect to your Google Account via IMAP and SMTP only, GYB will have no rights to any of your other Google Data. Make sure you are logged in to the Google account you specified before granting access. Once you've granted access, switch back to the command prompt window and hit enter. If no errors are printed, GYB should start estimating the size of your Gmail mailbox. Note that GYB only estimates the size of messages in the All Mail folder, it does not check Spam or Trash although these do count against your Gmail quota displayed at the bottom of your Gmail inbox. To accurately compare GYB's estimate and the Gmail inbox web page quota display, first empty your Trash and Spam folders.
 
 Congratulations, you're up and running with GYB! You probably want to move on to [#Step_4:_Performing_A_Backup performing a backup] now.
 
@@ -46,7 +46,7 @@ cd ~/gyb
 }}}
 this will work if you extracted the GYB files to a subfolder named gyb in your home directory. If you extracted them elsewhere, replace ~/gyb with the full path to them. Now run:
 {{{
-python gyb.py --email youremail@gmail.com --estimate
+python gyb.py --email youremail@gmail.com --action estimate
 }}}
 If you get an error about python not being a valid program, make sure you have the Python interpreter installed on your machine. All Macs and most Linux installs should include Python but if not, you may need to research how to install it on your OS/Distribution.
 
@@ -58,7 +58,7 @@ alias gyb="python gyb.py"
 }}}
 Now when we can just type commands like:
 {{{
-gyb --email myemail@gmail.com --estimate
+gyb --email myemail@gmail.com --action estimate
 }}}
 you'll need to type the alias command each time you open a Terminal to run GYB. 
 
@@ -67,9 +67,9 @@ Congratulations, you're up and running with GYB! You probably want to move on to
 = Step 4: Performing A Backup =
 A basic GYB backup is very easy to start. Just run:
 {{{
-gyb --email youremail@gmail.com --backup
+gyb --email youremail@gmail.com --action backup
 }}}
-the "--backup" is not strictly necessary since GYB defaults to backing up if an action is not specified. Assuming you've already granted GYB access to your Gmail messages, GYB will load the access token from youremail@gmail.com.cfg and use it to get access to your messgaes. By default, GYB will download and save all messages to a folder named "GYB-GMail-Backup-youremail@gmail.com". You can specify another folder for GYB to use with the --folder argument:
+the "--action backup" is not strictly necessary since GYB defaults to backing up if an action is not specified. Assuming you've already granted GYB access to your Gmail messages, GYB will load the access token from youremail@gmail.com.cfg and use it to get access to your messages. By default, GYB will download and save all messages to a folder named "GYB-GMail-Backup-youremail@gmail.com". You can specify another folder for GYB to use with the --local-folder argument:
 {{{
 gyb --email youremail@gmail.com --folder "C:\Users\John\Documents\Johns_Gmail_Backup"
 }}}
@@ -78,7 +78,7 @@ GYB will keep you update you as the backup progresses.
 = Step 5: Performing a Restore =
 Restores on GYB are also very simple:
 {{{
-gyb --email youremail@gmail.com --restore --folder "c:\my_gmail_backup"
+gyb --email youremail@gmail.com --action restore --local-folder "c:\my_gmail_backup"
 }}}
 the specified folder should exist and should have been used in a previous GYB backup. If not specified, restores default to using the GYB-GMail-Backup-youremail@gmail.com folder just like the backup does. GYB will connect to your Gmail account and perform the restore of all messages in the backup folder.
 
@@ -86,7 +86,7 @@ Note that if you perform a restore to the same Gmail account, GYB will not creat
 
 You can also use the "--label-restored NEWLABELNAME" argument to set a label on all restored messages. For example:
 {{{
-gyb --email youremail@gmail.com --restore --label-restored "Restored 05-09-11"
+gyb --email youremail@gmail.com --action restore --label-restored "Restored 05-09-11"
 }}}
 
 = Selective Backups With Gmail Searching =
@@ -96,54 +96,73 @@ gyb --email youremail@gmail.com --search "is:important OR is:starred"
 }}}
 would cause GYB to only backup messages matching that search query. Virtually any Gmail search will work with GYB. The only exception being that specifying "in:anywhere" will not backup Trash and Spam, there's currently no way to backup Trash and Spam with GYB. [http://mail.google.com/support/bin/answer.py?answer=7190 See here for a detailed article] on all of the possible Gmail Search parameters.
 
-Note that Gmail searches also work with the "--estimate" command. Suppose you wanted to know how much space emails with .PDF attachment are using in your Gmail mailbox:
+Note that Gmail searches also work with the "--action estimate" command. Suppose you wanted to know how much space emails with .PDF attachments are using in your Gmail mailbox:
 {{{
-gyb --estimate --search "filename:PDF"
+gyb --email youremail@gmail.com --action estimate --search "filename:PDF"
 }}}
 will estimate the size of messages with PDF attachments only. Try substituting DOC, JPG, ZIP and other common file attachments for PDF.
 
-You can also supply a list of labels following each of the actions to limit the action to messages with those labels:
-{{{
-gyb --email youremail@gmail.com --backup inbox important
-gyb --email youremail@gmail.com --restore inbox important
-}}}
-Supplying labels with a "backup" or "estimate" is equivalent to specifying a search: {{{--search "l:inbox OR l:important"}}}. If a label list and a search argument are both supplied, they will be joined together.  
-Specifying labels with a restore is the only way to limit the restore to particular labels. 
-
 = Advanced options =
-== --compress ==
-The *-C* or *--compress* option will attempt to use compression in the connection to Gmail, reducing the bandwidth used to complete the requested actions. In some cases, it may also reduce the time required.
 
-== --resume ==
-GYB keeps a record of messages restored to each account. The *--resume* switch will make GYB skip already completed messages during a restore. This avoids the need to upload the same messages again if the restore was interrupted.
+== --noresume ==
+GYB keeps a record of messages restored to each account and will pick up where it left off should the restore not finish. The *--noresume* switch will make GYB ignore messages already restored and restart the restore at the beginning.
 
 == --fast-incremental ==
 By default, GYB will refresh the stored labels and flags for messages that have already been backed up, just in case they changed after the backup. This step can be skipped by supplying the *-F* or *--fast-incremental* switch on the command line.
 
-== --reindex ==
-GYB keeps track of the messages backed up by using the IMAP UID values for the messages. It does not happen often, but it is sometimes necessary to reorganise an IMAP mailbox and assign new UIDs. When this happens, GYB will refuse to use the existing folder for further backups. The *--reindex* action will rebuild the UID index using information from the message headers. It is slow, but faster than re-downloading the full account to start a new backup.
+== --action reindex ==
+GYB keeps track of the messages backed up by using the IMAP UID values for the messages. It does not happen often, but it is sometimes necessary to reorganize an IMAP mailbox and assign new UIDs. When this happens, GYB will refuse to use the existing folder for further backups. The *--action reindex* action will rebuild the UID index using information from the message headers. It is slow, but faster than re-downloading the full account to start a new backup.
 
 (Another option is to make a new backup folder, but include a search for "after:" some recent date for that folder. If it is ever necessary to restore the mailbox, you would then need to restore from both folders.)
 
-= Google Apps Business and Education Admins: Backup, Restore and Estimate your user's email =
-If you're using Google Apps Business or Education Edition, it's possible to perform GYB Backups, Restores and Estimates for your Google Apps users without needing to know their password. This works because GYB can make use of a special Google Apps feature called Two-Legged OAuth. Just run:
+== --action restore-group ==
+Google Apps for Business and Education Only. This feature allows you to restore messages to a Google Group rather than a user mailbox. It's important to note that:
+ * Message labels, read/unread status, stars and other metadata are not preserved with restore-group.
+ * There is no API or method to extract or backup messages stored in Google Groups. GYB can restore messages but cannot backup message in Google Groups.
+ * Groups have no quota! If you're okay with the above issues, you can offload an unlimited amount of data to a group. This may be a good solution for users approaching their 25gb quota in Gmail.
+
+This option requires the --use-admin option below be specified. The --email option should be the Google Group to restore messages into. Archiving for the group should be enabled.
+
+== --use-admin ==
+Specify the Google Apps admin to utilize when restoring messages to a group with --action restore-group. This user should be a super administrator, delegated admins do not have sufficient privileges to perform group restores.
+
+== --action count ==
+Just count the number of messages in a user mailbox. Note, to compare this number to what you see in Gmail, you should turn conversation mode off in general settings and search for "-is:chat". This ensures you are counting individual messages (not conversations) and that archived chats (which are not backed up by GYB by default are not counted.
+
+== --action purge ==
+*DANGEROUS!!!* This option will delete WITHOUT ANY ABILITY TO RESTORE messages. Running this command without a --search parameter will EMPTY YOUR ENTIRE MAILBOX. This removes messages from Trash and Spam folders also so there is no ability to restore. Use this option with extreme caution. You have been warned.
+
+== --use-imap-folder ==
+By default, GYB always connects to the "All Mail" IMAP folder in order to perform backups, estimates, restores and counts. However, with this option, you can specify another IMAP folder to utilize. This option is most useful in backing up Archived Chats by specifying "--use-imap-folder [Gmail]/Chats. Make sure the Chats folder is visible to IMAP in your Gmail Settings -> Labels before running this. Note that chats cannot be restored to the Chats label in Gmail since the folder is read-only for IMAP.
+
+== --batch-size ==
+By default, GYB grabs the full content of 100 messages at a time for backup. If the mailbox has lots of very small messages, you may see better backup performance by backing up more messages at once with a --batch-size 500 parameter. If the mailbox has many very large messages, it may take a very long time for GYB to backup anything as it could be pulling down up to 2500mb (100 messages x 25mb each) of data for each batch. Try specifying something smaller like --batch-size 4.
+
+== --service-account ==
+Use a Google Service Account to authenticate rather than standard 3-legged OAuth authentication. This option is only for Google Apps for Business and Education users. See below for details.
+
+= Google Apps Business and Education Admins: Backup, Restore and Estimate Users and Restore to Groups=
+If you're using Google Apps for Business or Education Edition, it's possible to use GYB with your users without needing to know their password. This works because GYB makes use of a special Google Apps feature called Service Accounts.
+
+There are a few steps involved with creating and authorizing a service account for GYB.
+
+# Go to the [https://code.google.com/apis/console Google API Console]
+# Click "Create Project"
+# In the list of "All Services", scroll down to "Groups Migration API" and click the switch to toggle it ON. Agree to the terms.
+# Go to "API Access" menu to the left.
+# Click "Create an OAuth 2.0 client ID..." big blue button.
+# Enter a product name (other details are optional). Click Next.
+# Select the "Service Account" radio button. Click "Create client ID"
+# Click "Download private key". Save it to the same location as gyb.exe or gyb.py. Be sure to rename the file to privatekey.p12 (take off all the random characters).
+# Make a note of the Client ID and Email Address Values. You'll need them later so either copy them into Notepad or keep the API console window open in another tab.
+# Go to your Google Apps Control Panel.
+# Navigate to Advanced Tools -> Manage third party OAuth Client access.
+# For Client Name, enter the Client ID you recorded above. For API Scopes, enter exactly: {{{https://mail.google.com/,https://www.googleapis.com/auth/apps.groups.migration}}}
+# Now you can run GYB with the service account option. Specify your service account email address from above when using --service-account.
+
+Try running:
 {{{
-gyb --email yourusersemail@yourcompany.com --two-legged two-legged-key.txt
+gyb --email yourusersemail@yourcompany.com --service-account 123456789@developer.gserviceaccount.com
 }}}
-the first time you run this command, the file you specify for "two-legged-key.txt" will not exist. GYB will prompt you for your domain's OAuth Consumer Key and OAuth Consumer Secret. You can learn what these are by going to:
 
-https://www.google.com/a/cpanel/PUT-YOUR-DOMAIN-HERE.COM/SetupOAuth
-
-once you provide these values to GYB, they'll be saved to the file you specified. You'll then be able to perform backup, restore or estimate actions for any of your Google Apps users as long as you specify the "--two-legged two-legged-key.txt" option.
-
-If you are migrating data to or from users in a secondary domain, you'll need to take some additional steps. Follow the instructions at:
-
-http://www.google.com/support/enterprise/static/gapps/docs/admin/en/gapps_exchange_migration/prep_config_gapps.html
-
-but at Step 7 for the multidomain procudure, you should only need to specify the scope of:
-
-https://mail.google.com/
-
-once you've followed these steps, migrating data to or from a secondary Google Apps account should work with 2-legged OAuth.
-
-WARNING: Your OAuth Consumer Key and Secret offer very powerful control over your Google Apps domain. Do not use this option on a computer you do not trust! Do not leave the two legged file in places where others can find it! If you suspect your consumer key and secret have been stolen, use the "Regenerate OAuth Consumer Key" button on the page above to invalidate the old secret.
+WARNING: Service Accounts offer very powerful control over your Google Apps domain. Do not use this option on a computer you do not trust! Do not leave the privatekey.p12 file in places where others can find it! If you suspect your Service Account has been stolen, delete the API project in the API console and unauthorize it's access to your domain.
