--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -124,7 +124,7 @@ Google Apps for Business and Education Only. This feature allows you to restore 
 
 This option requires the --use-admin option below be specified. The --email option should be the Google Group to restore messages into. Archiving for the group should be enabled.
 
-A good use case for restore-group would be a user who is nearing Gmail quota. You could do a selective backup of the user's mailbox with a GYB backup using {{{--search before:2011/04/13 smaller:16M}}} to get only messages older than 2 years and smaller than 16mb. Then restore the messages to a Google Group and give the user exclusive access to the new group. Finally, free up the user's mailbox by performing a purge using the same parameters. I'd also recommend holding on to the local backup of the user's mail should you ever wish to restore to the mailbox.
+A good use case for restore-group would be a user who is nearing Gmail quota. You could do a selective backup of the user's mailbox with a GYB backup using {{{--search before:2011/04/13 smaller:16M}}} to get only messages older than 2 years and smaller than 16mb. Then restore the messages to a Google Group and give the user exclusive access to the new group. Finally, free up the user's mailbox by performing a purge using the same search parameters. I'd also recommend holding on to the local backup of the user's mail should you ever wish to restore to the mailbox.
 
 == --use-admin ==
 Specify the Google Apps admin to utilize when restoring messages to a group with --action restore-group. This user should be a super administrator, delegated admins do not have sufficient privileges to perform group restores.
@@ -133,7 +133,7 @@ Specify the Google Apps admin to utilize when restoring messages to a group with
 Just count the number of messages in a user mailbox. Note, to compare this number to what you see in Gmail, you should turn conversation mode off in general settings and search for "-is:chat". This ensures you are counting individual messages (not conversations) and that archived chats (which are not backed up by GYB by default are not counted.
 
 == --action purge ==
-*DANGEROUS!!!* This option will delete WITHOUT ANY ABILITY TO RESTORE messages. Running this command without a --search parameter will EMPTY YOUR ENTIRE MAILBOX. This removes messages from Trash and Spam folders also so there is no ability to restore. Use this option with extreme caution. You have been warned.
+*DANGEROUS!!!* This option will completely delete messages. Running this command without a --search parameter will EMPTY YOUR ENTIRE MAILBOX. This removes messages from Trash and Spam folders also so there is no ability to restore from the mailbox itself. Use this option with extreme caution. You have been warned. It is highly recommended to do a backup before a purge.
 
 == --use-imap-folder ==
 By default, GYB always connects to the "All Mail" IMAP folder in order to perform backups, estimates, restores and counts. However, with this option, you can specify another IMAP folder to utilize. This option is most useful in backing up Archived Chats by specifying {{{--use-imap-folder [Gmail]/Chats}}}. Make sure the Chats folder is visible to IMAP in your Gmail Settings -> Labels before running this. Note that chats cannot be restored to the Chats label in Gmail since the folder is read-only for IMAP.
